objects/Notes__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Product__c</field>
                <operation>equals</operation>
                <value>VIP Registration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Booth build</fullName>
                </value>
                <value>
                    <fullName>Booth inquiry</fullName>
                </value>
                <value>
                    <fullName>Booth orders</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Set-up</fullName>
                </value>
                <value>
                    <fullName>Sponsorship inquiry</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>report_Account__c</fullName>
        <formula>IF(ISBlank(Opportunity__c), Account__r.Account_18_digit_ID__c , Opportunity__r.Account.Account_18_digit_ID__c )</formula>
        <label>report_Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_Event__c</fullName>
        <formula>IF(ISBlank(Opportunity__c), CASESAFEID(Event__c), CASESAFEID(Opportunity__r.Event__c))</formula>
        <label>report_Event</label>
        <type>Text</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>